<resources>
    <string name="app_name">Tripay</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Növbəti</string>
    <string name="createAccount">Hesab yarat</string>
    <string name="enterAccount">Hesaba daxil ol</string>
    <string name="enterName">Adınızı daxil edin</string>
    <string name="enterEmail">E-mail adresini daxil edin</string>
    <string name="enterPhoneNumber">Nömrənizi daxil edin</string>
    <string name="haveAccount">Hesabınız var? Daxil ol</string>
    <string name="dontHaveAccount">Hesabınız yoxur? Qeydiyyatdan keç</string>
    <string name="enter">Daxil ol</string>
    <string name="registration">Qeydiyyat</string>
    <string name="termsPolicy">Qaydalar və Şərtlərlə razıyam</string>
    <string name="createPin">Hesab üçün PİN kod yarat</string>
    <string name="confirmPin">PİN kodu yeniden daxil edin</string>
    <string name="enterPin">PİN kodu daxil edin</string>
    <string name="hello">Salam, Alican</string>
    <string name="balance">Balansınız:</string>
    <string name="sendCash">Pul göndər</string>
    <string name="addFund">Balans artır</string>
    <string name="services">Xidmətlər</string>
    <string name="recentTransaction">Son əməliyyatlar</string>
    <string name="seeAll">Daha çox</string>
    <string name="transactionPin">Ödəniş üçün PİN kodunuzu daxil edin</string>
    <string name="transactionAmount">Göndəriləcək məbləği daxil edin</string>
    <string name="transactionAddAmount">Mədaxil ediləcək məbləği daxil edin</string>
    <string name="confirm">Təsdiqlə</string>
    <string name="option">Seçimlər</string>
    <string name="done">Tamam</string>
    <string name="card">Kart</string>
    <string name="cardDescription">Hesabınızdan debet karta pul köçürün</string>
    <string name="cardInformation">Kart məlumatları</string>
    <string name="cardHolder">Kart sahibi</string>
    <string name="cardNumber">Kart nömrəsi</string>
    <string name="contact">Kontakt</string>
    <string name="contactDescription">Hesabınızdan kontaktınızdakı şəxsə pul köçürün</string>
    <string name="receiverChoose">Kimə pul göndərmək istəyirsiniz?</string>
    <string name="nameOrPhone">Ad vəya nömrə</string>
    <string name="contactChoose">Kontaktınızdan seçin</string>
    <string name="receiverMessage">Alıcıya mesaj</string>
    <string name="messageOptional">Mesajınız (Məcburi deyil)</string>
    <string name="messageInput">Mesajınızı bura daxil edin</string>
    <string name="recharge">Mobil operatorlar</string>
    <string name="selectRecharge">Mobil operator seç</string>
    <string name="phoneNumber">Mobil nömrə</string>
    <string name="phoneNumberDesc">Mobil nömrəni daxil edin</string>
    <string name="enterAmount">Məbləği daxil edin</string>
    <string name="continueText">Davam et</string>
    <string name="areYouSure">Əminsiniz?</string>
    <string name="areYouSurePayment">Zəhmət olmasa ödəniş etmək istədiyinizdən əmin olun</string>
    <string name="successPayment">Uğurlu əməliyyat</string>
    <string name="successPaymentDescription">Əməliyyatınız uğurla yerinə yetirildi</string>
    <string name="paymentElectric">Elektrik ödənişi</string>
    <string name="paymentGas">Qaz ödənişi</string>
    <string name="chooseOperator">Operatoru seç</string>
    <string name="serviceCode">Abonent kodu</string>
    <string name="enterServiceCode">Abonent kodu daxil edin</string>
    <string name="paymentWater">Su ödənişi</string>
</resources>