<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".ui.services.water.WaterFragment">

    <ImageView
        android:id="@+id/imageViewWaterBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/icon_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewWaterHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dmsans_medium"
        android:text="@string/paymentWater"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewWaterBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewWaterBack" />

    <TextView
        android:id="@+id/textViewWaterOperator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/dmsans_semibold"
        android:text="@string/chooseOperator"
        android:textColor="@color/black_3B"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/imageViewWaterBack"
        app:layout_constraintTop_toBottomOf="@+id/imageViewWaterBack" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvWater"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clipToPadding="true"
        android:orientation="horizontal"
        android:paddingLeft="24dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWaterOperator"
        tools:listitem="@layout/item_brand" />

    <TextView
        android:id="@+id/textViewWaterNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/dmsans_semibold"
        android:text="@string/serviceCode"
        android:textColor="@color/black_3B"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvWater" />

    <TextView
        android:id="@+id/textViewWaterNumberDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/dmsans_medium"
        android:text="@string/enterServiceCode"
        android:textColor="@color/grey_AE"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textViewWaterNumber"
        app:layout_constraintTop_toBottomOf="@+id/textViewWaterNumber" />

    <EditText
        android:id="@+id/editTextWaterNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_input_dark"
        android:fontFamily="@font/dmsans_regular"
        android:hint="@string/serviceCode"
        android:inputType="text"
        android:paddingHorizontal="16dp"
        android:paddingVertical="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey_AE"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textViewWaterNumberDesc"
        app:layout_constraintTop_toBottomOf="@+id/textViewWaterNumberDesc" />

    <TextView
        android:id="@+id/textViewWaterAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/enterAmount"
        android:fontFamily="@font/dmsans_semibold"
        android:textColor="@color/black_3B"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/editTextWaterNumber"
        app:layout_constraintTop_toBottomOf="@+id/editTextWaterNumber" />

    <EditText
        android:id="@+id/editTextWaterAmount"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_input_dark"
        android:fontFamily="@font/dmsans_semibold"
        android:gravity="center"
        android:hint="0.00"
        android:inputType="numberDecimal"
        android:maxLength="9"
        android:padding="8dp"
        android:paddingHorizontal="16dp"
        android:textColor="@color/black_3B"
        android:textColorHint="@color/black_3B"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textViewWaterAmount"
        app:layout_constraintTop_toBottomOf="@+id/textViewWaterAmount" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonWater"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/green_8F"
        android:fontFamily="@font/dmsans_regular"
        android:paddingVertical="18dp"
        android:text="@string/continueText"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>